# razer-control-revived

./: .gitignore  CHANGELOG.md  README.md  cargo-modernization.patch  nvidia-smi-daemon-leading.patch  udev-fix-70-uaccess.patch  v2.6-version-docs.patch
.github/workflows/: ci.yml
docs/: CONTRACTS.md  ec-protocol.md
razer_control_gui/: Cargo.toml  install.sh
razer_control_gui/data/devices/: laptops.json
razer_control_gui/data/gnome-extension/razer-osd@hoenerc.github.io/: extension.js  metadata.json
razer_control_gui/data/gui/: com.encomjp.razer-settings.desktop
razer_control_gui/data/services/systemd/: razercontrol.service
razer_control_gui/data/udev/: 70-razercontrol.rules  99-hidraw-permissions.rules
razer_control_gui/src/: comms.rs  lib.rs
razer_control_gui/src/cli/: cli.rs
razer_control_gui/src/daemon/: battery.rs  config.rs  daemon.rs  device.rs  gpu.rs  login1.rs  powerkey.rs
razer_control_gui/src/daemon/kbd/: mod.rs
razer_control_gui/src/razer-settings/: error_handling.rs  razer-settings.rs  tray.rs  widgets.rs
